ncc/testsuite/positive/bug-1027.n
public variant V
{
  | A
    {
      internal override M(): void
      {
        ()
      }
    }

  internal virtual M(): void
  {
    ()
  }
}

class A
{
    static Main() : void
    {
    }
}

/*
BEGIN-OUTPUT
END-OUTPUT
*/

