ncc/testsuite/negative/cyclic-type.n

public class C
{
   public static Main () : void
   {
     def f (x) { x (x) } // E: cyclic type found
   }
}
